--- a/D-Learning/src/main/resources/application.properties
+++ b/D-Learning/src/main/resources/application.properties
@@ -20,6 +20,13 @@ cloudinary.cloud-name=dznef2sae
 cloudinary.api-key=537285485346489
 cloudinary.api-secret=PHu0HBagBqf1rgfKMSJpSLUh29M
 
+# Spring Session JDBC configuration
+spring.session.store-type=jdbc
+spring.session.timeout=30m
+spring.session.jdbc.initialize-schema=always
+#server.servlet.session.timeout
+#spring.session.jdbc.table-name=SPRING_SESSION
+
 
 
 
